compiler/lyra/src/test/resources/semantic_errors/ImportBadFile.ly
import "ImportedBadFile.ly";

class Application {
    def main {
    }
}